--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 
 
-    <title>Johnson's Landscaping & Plowing</title>
+    <title>Save the Yard LLC.</title>
 </head>
 
 <body>
@@ -143,7 +143,8 @@
     </section>
     <!-- footer -->
     <footer>
-        <p>Copyright &copy; Johnson's Landscaping & Plowing <span class="date"> </span> All Rights Reserved.</p>
+        <p>Copyright &copy; Save the Yard LLC <span class="date"> </span> All Rights Reserved.</p>
+        <span>Site Built By Darren Delimond</span>
     </footer>
 
     <script src="JS/app.js"></script>
