--- a/index.html
+++ b/index.html
@@ -83,50 +83,48 @@
             </div>
             <div class="content-container">
                 <h2> We are committed to working on your lanscaping needs no matter
-                    the weather or season , here at Johnson's we work throughout all four seasons. </h2>
+                    the season, view below to see the services that we offer </h2>
+                <div class="seasonal-services">
+                    <div class="season-container">
+                        <h4>Summer</h4>
+                        <ul>
+                            <li>Cutting Lawn</li>
+                            <li>Tree & Hedge Triming</li>
+                            <li>Gardening</li>
+
+                        </ul>
+                    </div>
+
+
+                    <div class="season-container">
+                        <h4>Fall</h4>
+                        <ul>
+                            <li>Raking Leaves</li>
+                            <li>Leave Removal</li>
+                            <li>Tree & Hedge Triming</li>
+                        </ul>
+                    </div>
+
+                    <div class="season-container">
+                        <h4>Winter</h4>
+                        <ul>
+                            <li>Driveway Snow Removal</li>
+                            <li>Sidewalk Snow Removal </li>
+                            <li>Road Snow Removal</li>
+                        </ul>
+                    </div>
+
+                    <div class="season-container">
+                        <h4>Spring</h4>
+                        <ul>
+                            <li>Mulching</li>
+                            <li>Gardening </li>
+                            <li>Tree & Hedge Triming</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="seasonal-services">
-            <div class="season-container">
-                <h4>Summer</h4>
-                <ul>
-                    <li>Cutting Lawn</li>
-                    <li>Tree & Hedge Triming</li>
-                    <li>Gardening</li>
-
-                </ul>
-            </div>
-
-
-            <div class="season-container">
-                <h4>Fall</h4>
-                <ul>
-                    <li>Raking Leaves</li>
-                    <li>Leave Removal</li>
-                    <li>Tree & Hedge Triming</li>
-                </ul>
-            </div>
-
-            <div class="season-container">
-                <h4>Winter</h4>
-                <ul>
-                    <li>Driveway Snow Removal</li>
-                    <li>Sidewalk Snow Removal </li>
-                    <li>Road Snow Removal</li>
-                </ul>
-            </div>
-
-            <div class="season-container">
-                <h4>Spring</h4>
-                <ul>
-                    <li>Mulching</li>
-                    <li>Gardening </li>
-                    <li>Tree & Hedge Triming</li>
-                </ul>
-            </div>
-        </div>
-
 
 
     </section>
