added updated image modal

--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
 <body>
     <!-- header -->
     <header id="home">
-        <div class="logo-container">
-            <a href="index.html" class="home-button">
-                <img class="logo" src="/Logo/Transparent-2.png" alt="">
-            </a>
-            <button class="hamburger">
-                <i class="fa-solid fa-bars"></i>
-            </button>
+        <div class="navigation">
+            <div class="logo-container">
+                <a href="index.html" class="home-button">
+                    <img class="logo" src="/Logo/Transparent-2.png" alt="">
+                </a>
+                <button class="hamburger">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+            </div>
+
+
+            <nav class="link-container">
+                <ul class="links">
+                    <li><a href="#home" class="scroll-link">Home</a></li>
+                    <li><a href="#about" class="scroll-link">About</a></li>
+                    <li><a href="#services" class="scroll-link">Services</a></li>
+                    <li><a href="#clients" class="scroll-link">Our Clients</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-
-
-        <nav class="link-container">
-            <ul class="links">
-                <li><a href="#home" class="scroll-link">Home</a></li>
-                <li><a href="#about" class="scroll-link">About</a></li>
-                <li><a href="#services" class="scroll-link">Services</a></li>
-                <li><a href="#clients" class="scroll-link">Our Clients</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="business-hours">
+            <h3>Business Hours: 8:00am - 7:00pm</h3>
+        </div>
     </header>
 
     <!-- Overlay -->
@@ -175,15 +180,8 @@
             <button class="right-btn next-btn btn"><i class="fa-solid fa-chevron-right"></i></button>
         </div>
         <div class="modal-bottom">
-            <!-- <div class="modal-content-container">
-                <img src="/Assets/Past Jobs/garden-2.jpeg" class="modal-image" alt="Client Job Image">
-            </div>
-            <div class="modal-content-container">
-                <img src="/Assets/Past Jobs/garden-2.jpeg" class="modal-image" alt="Client Job Image">
-            </div>
-            <div class="modal-content-container">
-                <img src="/Assets/Past Jobs/garden-2.jpeg" class="modal-image" alt="Client Job Image">
-            </div> -->
+
+
         </div>
     </div>
     <!-- footer -->
