update to contact form

--- a/contact.html
+++ b/contact.html
@@ -76,10 +76,9 @@
                 <input type="tel" id="phone-number" placeholder="(555)-555-5555">
             </div>
 
-            <div class="feild">
-                <label for="message">Message</label><br>
-                <input type="text" id="message" placeholder="Please enter your Message">
-            </div>
+
+            <textarea rows="8" spellcheck="true" name="message" placeholder="Enter Messasge"></textarea>
+
 
             <button class="contact-btn">Submit</button>
             <!-- <input type="submit"> -->
